--- a/msat.opam
+++ b/msat.opam
@@ -3,27 +3,26 @@ name: "msat"
 license: "Apache"
 version: "dev"
 author: ["Sylvain Conchon" "Alain Mebsout" "Stephane Lecuyer" "Simon Cruanes" "Guillaume Bury"]
-maintainer: ["guillaume.bury@gmail.com" "simon.cruanes@inria.fr"]
+maintainer: ["guillaume.bury@gmail.com" "simon.cruanes.2007@m4x.org"]
 build: [
-    [make "disable_log"]
-    [make "lib"]
+    [make "build"]
 ]
 build-doc: [
     [make "doc"]
 ]
 install: [
-    [make "DOCDIR=%{doc}%" "install"]
+    [make "install"]
 ]
 remove: [
-    [make "DOCDIR=%{doc}%" "uninstall"]
+    [make "uninstall"]
 ]
 depends: [
   "ocamlfind" {build}
-  "ocamlbuild" {build}
+  "jbuilder" {build}
   "dolmen" {test & = "dev" }
 ]
 available: [
-  ocaml-version >= "4.00.1"
+  ocaml-version >= "4.03.0"
 ]
 tags: [ "sat" "smt" ]
 homepage: "https://github.com/Gbury/mSAT"
