--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,17 @@
 language: c
 env:
-  # Check that the package installs correctly with and without its test dependencies using opam
-  - TO_TEST=install OPAMBUILDTEST=false OCAML_VERSION=4.03.0
-  - TO_TEST=install OPAMBUILDTEST=true OCAML_VERSION=4.03.0
-  # Check build and unit tests
-  # NOTE: testing needs OPAMBUILDTEST=true so that test deps are installed
-  - TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.03.0
-  - TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.03.0+flambda
-  - TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.04.2
-  - TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.04.2+flambda
-  - TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.05.0
-  - TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.05.0+flambda
-  - TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.06.0
-  - TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.06.0+flambda
-#matrix:
-#  allow_failures:
-#    # opam-installer fails on these versions (will probably be fixed before the official opam2 release
-#    - env: TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.06.0
-#    - env: TO_TEST=tests OPAMBUILDTEST=true OCAML_VERSION=4.06.0+flambda
-# Caching may take a lot of space with so many ocaml versions
-#cache:
-#  directories:
-#    - $HOME/.opam
+  - RUN_TEST=true OCAML_VERSION=4.03.0
+  - RUN_TEST=true OCAML_VERSION=4.03.0+flambda
+  - RUN_TEST=true OCAML_VERSION=4.04.0
+  - RUN_TEST=true OCAML_VERSION=4.04.0+flambda
+  - RUN_TEST=true OCAML_VERSION=4.06.0
+addons:
+  apt:
+    sources:
+      - avsm
+    packages:
+      - opam
+      - time
 before_install:
   # Download and use opam2
   - wget -O ${HOME}/opam https://github.com/ocaml/opam/releases/download/2.0.0-beta6/opam-2.0.0-beta6-x86_64-linux
